--- a/css/master.css
+++ b/css/master.css
@@ -31,18 +31,19 @@
 /**** GOMAIN ****/
 .myname {
   position: absolute;
-  top: 50px;
-  left: 40px;
-  width: 120px; height: 120px;
+  top: 20px;
+  left: 30px;
+  width: 100px; height: 100px;
   z-index: 300;
 }
 .myname a {
-  width: 120px; height: 120px;
+  width: 100px; height: 100px;
   background: url(../images/sunny_logo.png);
   text-indent: -6000px;
   overflow: hidden;
   animation: rotate_image 15s linear infinite;
   transform-origin: 50% 50%;
+  background-size: 100px;
 }
 @keyframes rotate_image {
   100% {
@@ -101,14 +102,14 @@ ul#main_nav > li {
   font-size: 20px;
 }
 ul#main_nav > li:first-child {
-  margin-top: 120px;
+  margin-top: 70px;
 }
 ul#main_nav > li > h3 {
   height: 54px;
   padding-left: 30px;
   line-height: 54px;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 20px;
   color: #8081d9;
   cursor: pointer;
 }
@@ -117,7 +118,7 @@ ul#main_nav > li > h3 > button {
   height: 54px;
   text-align: left;
   color: #8081d9;
-  font-size: 24px;
+  font-size: 20px;
   cursor: pointer;
 }
 ul#main_nav > li:hover > h3 > button {
@@ -154,11 +155,11 @@ ul#main_nav > li.active > ul.sub_nav > li{
   height: 50px;
 }
 ul#main_nav > li > ul.sub_nav > li > a{
-  padding-left: 60px;
+  padding-left: 50px;
   line-height: 50px;
   height: 50px;
   color: #fff;
-  font-size: 20px;
+  font-size: 17px;
   background-color: #9b9ce8;
   transition-duration: 0.3s;
 }
@@ -204,6 +205,7 @@ section {
 }
 #home img {
   width: 100%;
+  margin-top: -100px;
 }
 #maintitle {
   position: absolute;
@@ -447,7 +449,7 @@ section {
 
 /**** FOOTER ****/
 #contact .wrap_align .footer {
-  width: 100%; height: 100px;
+  width: 100%; height: 80px;
   position: absolute;
   bottom: 0;
   text-align: center;
@@ -472,7 +474,7 @@ section {
 #contact .wrap_align .footer .copyright {
   font-size: 18px;
   color: #6e6e6e;
-  padding-top: 35px;
+  padding-top: 24px;
   z-index: 10;
 }
 
@@ -546,6 +548,9 @@ section {
     transform: translateY(-50%);
     margin: 0 40px;
   }
+  #portfolio .wrap_align .brandlist ul {
+    margin-top: 60px;
+  }
   #portfolio .wrap_align .brandlist ul li {
     display: inline-block;
     padding: 0 60px;
@@ -582,7 +587,7 @@ section {
   }
   #me .wrap_align .profile_wrap .info {
     position: absolute;
-    top: 50%;
+    top: 57%;
     left: 22%;
     font-size: 16px;
   }
@@ -628,7 +633,7 @@ section {
   /* SECTION5 CONTACT */
   #contact .wrap_align .address h2 {
     font-size: 40px;
-    margin-top: 6%;
+    margin-top: 4%;
     letter-spacing: 3px;
   }
   #contact .wrap_align .address p.first {
@@ -640,7 +645,7 @@ section {
   }
   .circle {
     width: 350px; height: 350px;
-    margin: 5% auto 0 auto;
+    margin: 3% auto 0 auto;
     border-radius: 100%;
     background-color: rgba(0, 0, 0, 0.3);
   }
@@ -1059,6 +1064,7 @@ section {
     border-bottom: 3px solid #fff;
     letter-spacing: 5px;
     min-width: 250px;
+    padding-bottom: 5px;
   }
   #home .wrap_align #maintitle h2 {
     font-size: 16px;
@@ -1151,13 +1157,13 @@ section {
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-left: -170px;
+    margin-left: -152px;
     font-size: 12px;
     letter-spacing: 2px;
   }
   #me .wrap_align .profile_wrap .info ul.answer {
     position: absolute;
-    left: 103px;
+    left: 85px;
     top: 0;
     text-align: left;
     width: 220px;
@@ -1165,12 +1171,12 @@ section {
   #me .wrap_align .profile_wrap .info ul.answer li {
     padding: 5px 0;
     line-height: 20px;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
   }
   #me .wrap_align .profile_wrap .info ul.question li {
     padding: 5px 0;
     line-height: 20px;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
   }
   #me .wrap_align .profile_wrap .info ul.question li:nth-child(4) {
     margin-top: 20px;
@@ -1178,7 +1184,10 @@ section {
   #me .wrap_align .profile_wrap .info ul.question li:last-child {
     margin-top: 40px;
   }
-  /* SECTION4 ART WORKS */
+  /* SECTION4 DESIGN WORKS */
+  .design_works {
+    font-size: 23px;
+  }
   #artwork .wrap_align .artlist li a div {
     transform: scale(1.0);
     margin: 0 auto;
